# P5-Ordenacion

./: CMakeLists.txt  burbuja.hpp  heap_sort.hpp  incremento.hpp  main.cpp  merge_sort.hpp  ordenacion.hpp  seleccion.hpp  sequence.hpp  sort_method.hpp  static_sequence.hpp
data/: data.txt
include/: burbuja.hpp  heap_sort.hpp  incremento.hpp  merge_sort.hpp  nif.hpp  seleccion.hpp  sequence.hpp  sort_method.hpp  static_sequence.hpp
src/: main.cpp
